Calendar correctly aligned

--- a/app/assets/stylesheets/common/datepicker.css.scss
+++ b/app/assets/stylesheets/common/datepicker.css.scss
@@ -41,7 +41,7 @@ $sDates-defaultWidth: 434px;
 }
 .DatePicker-datesIcon {
   position: absolute;
-  top: 10px;
+  top: 11px;
   right: 15px;
   font-size: $sFontSize-larger;
   color: $cTypography-help;
